[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "asaf"
version = "0.0.1"
authors = [
    { name = "Bartosz Mazur", email = "bartosz.mazur@pwr.edu.pl" },
]
description = "Library to facilitate the processing and analysis of data from the grand canonical transition matrix Monte Carlo adsorption simulations."
readme = "README.md"
license = { text = "MIT license" }
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "gemmi",
    "pymatgen",
    "plotly",
]

[project.optional-dependencies]
#dev = ["pytest>=7.4.0", "pytest-cov>=3.0.0", "ruff>=0.0.285"]
docs = [
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.22.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "pillow>=10.0.0",
    "cairosvg>=2.7.1"
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "asaf",
    "asaf.mpd",
    "asaf.constants",
    "asaf.isotherm"
]

[dependency-groups]
lint = [
    "ruff>=0.11.13",
    "pandas-stubs",
    "scipy-stubs"
]
