[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "asaf"
version = "0.0.1"
authors = [
    { name = "Bartosz Mazur", email = "bartosz.mazur@pwr.edu.pl" },
]
description = "Library to facilitate the processing and analysis of data from the grand canonical transition matrix Monte Carlo adsorption simulations."
readme = "README.md"
license = { text = "MIT license" }
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "gemmi",
    "pymatgen",
    "plotly",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "asaf",
    "asaf.mpd",
    "asaf.constants",
    "asaf.isotherm",
    "asaf.utils",
]

[dependency-groups]
lint = [
    "ruff>=0.11.13",
    "pandas-stubs",
    "scipy-stubs"
]
docs = [
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.22.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "pillow>=10.0.0",
    "cairosvg>=2.7.1"
]
dev = ["pytest", "pytest-cov"]

[tool.uv]
default-groups = ["lint", "docs", "dev"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.docformatter]
pre-summary-newline = true
black = true

[tool.ruff.per-file-ignores]
"tests/**" = ["D"]
"*_test.py" = ["D"]
