[metadata]
name = asaf
version = attr: asaf.__version__
author = Bartosz Mazur
author_email = bartosz.mazur@pwr.edu.pl
description = A python library created to facilitate the processing and analysis of data from grand canonical transition matrix Monte Carlo adsorption simulations.
long_description = file: README.md
license = MIT license
license_files = LICENSE

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.8
install_requires =
	numpy
	scipy
	pandas
    gemmi
    plotly

[options.packages.find]
where=src
